KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Jio_Employee_Details__c/Jio_Employee_Details__c.object-meta.xml
<CustomObject>
    <label>Jio Employee Details</label>
    <nameField>
        <label>Employee First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jio Employee Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>