KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Jio_Employee_Details__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>