KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Jio_Employee_Details__c/fields/Cities__c.field-meta.xml
<CustomField>
    <fullName>Cities__c</fullName>
    <label>Cities</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vijayawada</fullName>
            </value>
            <value>
                <fullName>Vizag</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Warangal</fullName>
            </value>
            <value>
                <fullName>Bengaluru</fullName>
            </value>
            <value>
                <fullName>Mysore</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Madurai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>