KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Jio_Employee_Details__c/fields/Employee_Address__c.field-meta.xml
<CustomField>
    <fullName>Employee_Address__c</fullName>
    <formula>Address__c +&apos; &apos;+ TEXT( Cities__c ) +&apos; &apos;+TEXT(  State__c  )+&apos; &apos;+TEXT(   Postal_Code__c   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Address</label>
    <type>Text</type>
</CustomField>