KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Jio_Employee_Details__c/fields/Employee_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_Email_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Employee Email ID</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>