KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Jio_Employee_Details__c/fields/Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id__c</fullName>
    <displayFormat>JEID{00}</displayFormat>
    <label>Employee Id</label>
    <type>AutoNumber</type>
</CustomField>