KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Jio_Employee_Details__c/fields/Number_of_salary_Records__c.field-meta.xml
<CustomField>
    <fullName>Number_of_salary_Records__c</fullName>
    <label>Number of salary Records</label>
    <summaryForeignKey>Jio_Salary_Details__c.Employee_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>