KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Jio_Employee_Details__c/fields/Reporting_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting Manager</label>
    <referenceTo>Jio_Employee_Details__c</referenceTo>
    <relationshipLabel>Jio Employee Details</relationshipLabel>
    <relationshipName>Jio_Employee_Details</relationshipName>
    <type>Lookup</type>
</CustomField>