KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Jio_Employee_Details__c/recordTypes/Non_Skilled.recordType-meta.xml
<RecordType>
    <fullName>Non_Skilled</fullName>
    <active>true</active>
    <label>Non Skilled</label>
</RecordType>