KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Jio_Employee_Details__c/recordTypes/Skilled.recordType-meta.xml
<RecordType>
    <fullName>Skilled</fullName>
    <active>true</active>
    <label>Skilled</label>
</RecordType>