KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Jio_Employee_Details__c/validationRules/Employee_Minimum_Age.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_Minimum_Age</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Age__c  &lt; 22, true, false)</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>Age should be minimum 22 years for employee.</errorMessage>
</ValidationRule>