KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Jio_Employee_Details__c/listViews/Employee_View.listView-meta.xml
<ListView>
    <fullName>Employee_View</fullName>
    <columns>Employee_Id__c</columns>
    <columns>NAME</columns>
    <columns>Employee_Last_Name__c</columns>
    <columns>Gender__c</columns>
    <columns>Employee_Email_ID__c</columns>
    <columns>Age__c</columns>
    <filterScope>Mine</filterScope>
    <label>Employee View</label>
</ListView>